# cc

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  main.cpp
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
